<resources>
    <string name="app_name">Foodaholic</string>
    <string name="action_settings">Settings</string>
    <string name="latest">Latest Meal Recipes</string>
    <string name="categories">Categories</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_meal_details">Details</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_placeholder">Put the uncooked chicken breasts in the crock pot. Pour the full bottle of
        salad dressing over the chicken. Sprinkle the rest of the ingredients over the top and mix them in a bit with a
        spoon. Cover your crock pot with the lid and cook on high for 4 hours. Remove all the chicken breasts from the
        crock pot and let cool. Shred the chicken breasts and move to a glass bowl. Pour most of the liquid over the
        shredded chicken. FOR THE TACOS: Make the guacamole sauce by mixing the avocado and green salsa together. Pour
        the guacamole mixture through a strainer until smooth and transfer to a squeeze bottle. Cut the tip off the lid
        of the squeeze bottle to make the opening more wide if needed. Make the sour cream sauce by mixing the sour
        cream and milk together until you get a more liquid sour cream sauce. Transfer to a squeeze bottle. In a 9x 13
        glass baking dish, fill all 12+ tacos with a layer of refried beans, cooked chicken and shredded cheese. Bake at
        450 for 10-15 minutes just until the cheese is melted and bubbling. Out of the oven top all the tacos with the
        sliced grape tomaotes, jalapeno and cilantro. Finish with a drizzle of guacamole and sour cream. Enjoy!
    </string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hint_search">Enter keywords</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="version">Version 1.0</string>
    <string name="title_activity_bookmark">Bookmarks</string>
    <string name="title_activity_info">About</string>
    <string name="recipes">Recipes</string>
    <string name="developed_by">Developed by</string>
    <string name="me">Nyi Nyi Htun Lwin</string>
    <string name="contact">Contact me via</string>
</resources>
