<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="com.nyinyihtunlwin.projects.foodaholic.mvvm.viewmodels.InfoViewModel"/>
    </data>
    <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.BookmarkActivity">

        <android.support.design.widget.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_medium"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                    android:id="@+id/iv_app_logo"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_above="@id/tv_app_name"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/app_icon"/>

            <TextView
                    android:id="@+id/tv_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/tv_movies_and_tvshow"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_regular_3x"/>

            <TextView
                    android:id="@+id/tv_movies_and_tvshow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/tv_version"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:text="@string/recipes"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/text_regular"/>

            <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/tv_developed_by"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:text="@string/version"
                    android:textColor="@color/secondary_text"/>

            <TextView
                    android:id="@+id/tv_developed_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/developed_by"
                    android:textColor="@color/accent"/>

            <TextView
                    android:id="@+id/tv_developer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_developed_by"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/me"
                    android:textColor="@color/accent"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/tv_contact_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_developer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:text="@string/contact"
                    android:textColor="@color/secondary_text"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_contact_me"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/iv_facebook"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{viewModel.onTapFacebook}"
                        android:src="@drawable/if_facebook_410527"/>

                <ImageView
                        android:id="@+id/iv_linkedin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{viewModel.onTapLinkedIn}"
                        android:src="@drawable/if_linkedin_386655"/>

                <ImageView
                        android:id="@+id/iv_github"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{viewModel.onTapGitHub}"
                        android:src="@drawable/git_120px_plus"/>
            </LinearLayout>
        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>
